checkbox alignment fix and UI changes

--- a/client/src/app/task-list/task-list.component.css
+++ b/client/src/app/task-list/task-list.component.css
@@ -10,6 +10,7 @@ li {
     border: 1px solid darkgrey;
     border-radius: 4px;
     width: 100%;
+    float: left;
 }
 
 li:hover {
@@ -28,17 +29,47 @@ a:hover {
     height: 30px;
 }
 
-.btn-danger {
+select {
+    border: 2px solid black;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=text] {
+    border: 2px solid black;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-weight: bold;
+}
+
+label {
+    display: block;
+    padding-left: 15px;
+    text-indent: -15px;
+  }
+  input[type=checkbox] {
+    width: 20px;
+    height: 20px;
+    padding: 0;
+    margin: 3px;
+    vertical-align: bottom;
+    position: relative;
+    top: 0;
+    *overflow: hidden;
+  }
+
+.btn-delete {
     display: flex;
     position: absolute;
-    padding: 1px;
+    padding: 3px;
     top: 5px;
     right: 5px;
-    width: 32px;
-    height: 32px;
+    width: 25px;
+    height: 25px;
     background-color: darkred !important; 
     color: white;
     font-weight: bolder;
+    font-size: 10px;
     align-content: center;
     justify-content: center;
 }
